# FNCE_RESEARCH

./: .env.example  .gitignore  README.md  pyproject.toml  test_conn.py  test_conn_out.txt
notebooks/: 00_setup_check.ipynb  01_data_pull_crsp.ipynb  wrds_connection_check.ipynb
scripts/: build_cache.py
src/fnce_research/: __init__.py  config.py  wrds_conn.py
src/fnce_research/analysis/: event_study.py  panel_reg.py  portfolio_sorts.py
src/fnce_research/data/: cache.py  compustat.py  crsp.py  ibes.py  merge.py
src/fnce_research/utils/: stats.py  tables.py
